--- a/index.html
+++ b/index.html
@@ -82,17 +82,18 @@
 <div class="section">
     <h2>WhatsApp Booking</h2>
     <p>
-        <a href="https://wa.me/919999999999">
+        <a href="https://wa.me/8580629033">
             Click Here to Book on WhatsApp
         </a>
     </p>
 </div>
 
 <footer>
-    <p>Contact: +91-9999999999 | +91-8888888888</p>
+    <p>Contact: +91-8580629033 | </p>
     <p>Online Payment & Cash on Arrival Available</p>
     <p>© 2026 Khajjiar Adventures</p>
 </footer>
 
 </body>
 </html>
+
