--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Khajjiar Adventures</title>
-    <img src="WhatsApp Image 2026-02-18 at 12.01.00 PM" alt="Khajjiar View" 
+    <img src="WhatsApp Image 2026-02-18 at 12.01.00 PM.jpeg"Khajjiar View" 
 style="width:100%; max-height:400px; object-fit:cover; border-radius:15px; margin-top:15px;">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -98,5 +98,6 @@ style="width:100%; max-height:400px; object-fit:cover; border-radius:15px; margi
 
 </body>
 </html>
+
 
 
